--- a/src/pages/Building/ArtifactHelper/Search/components/SearchResult/SearchResult.scss
+++ b/src/pages/Building/ArtifactHelper/Search/components/SearchResult/SearchResult.scss
@@ -35,4 +35,9 @@
     display: flex;
     gap: 1em;
   }
+
+  .character-artifacts-combinations {
+    background-color: var(--background-secondary);
+    margin-bottom: .5rem;
+  }
 }
